@startuml
hide methods

skinparam classAttributeIconSize 0


class Company {
  -designation
}

class Admin{
}

class Parameter{
    -code
    -shortName
    -description
}

class ParameterCategory{
    -code
    -name
}

Company"1" -- "*"Admin :> employs
Company"1" -- "*"Parameter :> capable of \nanalysing
Company"1" -- "*"ParameterCategory :> adopts
Admin"1" -- "*"Parameter :< created by
Parameter"*" -- "1"ParameterCategory :> shown under
Admin"1" -- "*"ParameterCategory :< created by

@enduml